# dde-shell

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  plantuml copy.wsd  plantuml.wsd
applets/dde-apps/: CMakeLists.txt  abstractdesktopinfo.h  amappitem.cpp  amappitem.h  amappitemmodel.cpp  amappitemmodel.h  appgroup.cpp  appgroup.h  appgroupmanager.cpp  appgroupmanager.h  appitem.cpp  appitem.h  appitemmodel.cpp  appitemmodel.h  appsapplet.cpp  appsapplet.h  appsdockedhelper.cpp  appsdockedhelper.h  appslaunchtimes.cpp  appslaunchtimes.h  categoryutils.cpp  categoryutils.h  desktopinfoam.cpp  desktopinfoam.h  itemspage.cpp  itemspage.h
applets/dde-apps/configs/: org.deepin.ds.dde-apps.json
applets/dde-apps/package/: metadata.json
applets/dde-key-notify/: CMakeLists.txt  keynotifyapplet.cpp  keynotifyapplet.h  treelandkeynotify.cpp  treelandkeynotify.h
applets/dde-key-notify/package/: metadata.json
applets/dde-shutdown/: CMakeLists.txt  shutdownapplet.cpp  shutdownapplet.h  treelandlockscreen.cpp  treelandlockscreen.h
applets/dde-shutdown/package/: metadata.json
applets/dde-weather/: CMakeLists.txt  weatherapplet.cpp  weatherapplet.h  weatherhelper.cpp  weatherhelper.h  weathermodel.cpp  weathermodel.h
applets/dde-weather/configs/: org.deepin.ds.weather.json
applets/dde-weather/package/: WeatherDetail.qml  main.qml  metadata.json
coronas/osd/: CMakeLists.txt  osdcorona.cpp  osdcorona.h
coronas/osd/brightness/: brightnessapplet.cpp  brightnessapplet.h
coronas/osd/displaymode/: CMakeLists.txt  displaymodeapplet.cpp  displaymodeapplet.h
coronas/osd/kblayout/: kblayoutapplet.h
coronas/osd/package/: main.qml  metadata.json
example/applet-widget-example/: CMakeLists.txt  exampleapplet.cpp  exampleapplet.h
example/applet-widget-example/package/: metadata.json
example/corona-example/: CMakeLists.txt  examplecorona.cpp  examplecorona.h  main.cpp
example/corona-example/package/: main.qml  metadata.json
example/panel-example/: CMakeLists.txt  examplepanel.cpp  examplepanel.h  main.cpp  org.deepin.ds.example.json
example/panel-example/package/: main.qml  metadata.json
panels/dock/: AppletDockItem.qml  AppletItemBackground.qml  AppletItemButton.qml  CMakeLists.txt  DockCompositor.qml  DockItem.qml  DockPalette.qml  MenuHelper.qml  OverflowContainer.qml  ShellSurfaceItemProxy.qml  constants.h  ddockapplet.cpp  ddockapplet.h  dockabstractsettingsconfig.h  dockdbusproxy.cpp  dockdbusproxy.h  dockhelper.cpp  dockhelper.h  dockiteminfo.cpp  dockiteminfo.h  dockpanel.cpp  dockpanel.h  dockpluginmanagerextension.cpp  dockpluginmanagerextension_p.h  dockpositioner.cpp  dockpositioner.h  docksettings.cpp  docksettings.h  docksettingsdconfig.cpp  docksettingsdconfig.h  environments.h.in  fashionleftpluginprovider.cpp  fashionleftpluginprovider.h  loadtrayplugins.cpp  loadtrayplugins.h  pluginmanagerextension.cpp  pluginmanagerextension_p.h  positionfixer.cpp  positionfixer.h  qmlplugin.cpp  (+9 more)
panels/dock/appruntimeitem/: CMakeLists.txt  appruntimeitem.cpp  appruntimeitem.h  qmlappruntime.qrc  windowmanager.cpp  windowmanager.h  xcb_get.cpp  xcb_get.h  xcbgetinfo.cpp  xcbgetinfo.h  xcbthread.cpp  xcbthread.h
panels/dock/cardleft/: CMakeLists.txt
panels/dock/clipboarditem/: CMakeLists.txt  clipboarditem.cpp  clipboarditem.h
panels/dock/dcc-dock-plugin/: CMakeLists.txt
panels/dock/dconfig/: org.deepin.dde.dock.json  org.deepin.dde.dock.plugin.quick-panel.json  org.deepin.ds.dock.json  org.deepin.ds.dock.tray.json
panels/dock/dock-shell-example/: CMakeLists.txt  item.cpp  item.h
panels/dock/dockplugin/: CMakeLists.txt
panels/dock/frame/: CMakeLists.txt  DDEShellDockConfig.cmake.in  dappletdock.cpp  dappletdock.h  dockiteminfo.cpp
panels/dock/launcherItem/: CMakeLists.txt  launcheritem.cpp  launcheritem.h
panels/dock/multitaskview/: CMakeLists.txt  multitaskview.cpp  multitaskview.h  treelandmultitaskview.cpp  treelandmultitaskview.h
panels/dock/package/: DockPartAppletModel.qml  FashionBackgroundInnerBorder.qml  FashionDockController.qml  FashionLeftDockArea.qml  FashionLeftDockSwitcher.qml  SpotlightGradient.png.license  main.qml  metadata.json
panels/dock/private/: ddockapplet_p.h
panels/dock/quickpanel/: CMakeLists.txt  quickpanel.cpp  quickpanel.h  quickpanelproxymodel.cpp  quickpanelproxymodel.h
panels/dock/searchitem/: CMakeLists.txt  searchitem.cpp  searchitem.h
panels/dock/showdesktop/: CMakeLists.txt  showdesktop.cpp  showdesktop.h
panels/dock/slidingpanel/: CMakeLists.txt
panels/dock/taskmanager/: CMakeLists.txt  abstractitem.cpp  abstractitem.h  abstracttaskmanagerinterface.h  abstractwindow.h  abstractwindowmonitor.cpp  abstractwindowmonitor.h  appgroupitem.h  appitem.cpp  (+60 more)
panels/notification/: CMakeLists.txt  bubblemodel.cpp  bubblemodel.h  dbusadaptor.cpp  dbusadaptor.h  notificationcontainment.cpp  notificationentity.cpp  notificationentity.h  notificationinterproxy.cpp  notificationinterproxy.h  notificationmanager.cpp  notificationmanager.h  notificationpanel.cpp  notificationpanel.h  notificationsetting.cpp  notificationsetting.h  persistence.cpp  persistence.h  test.sh
panels/notification-center/: AnimationSettingButton.qml  BoundingRectangle.qml  CMakeLists.txt  DataPanel.qml  GroupNotify.qml  Main.qml  NormalNotify.qml  NotifyAction.qml  NotifyCenter.qml  NotifyHeader.qml  NotifyItem.qml  NotifyItemBackground.qml  NotifyItemContent.qml  NotifyView.qml  NotifyViewDelegate.qml  OverlapNotify.qml  SettingActionButton.qml  dbaccessor.cpp  dbaccessor.h  notificationcenterpanel.cpp  notificationcenterpanel.h  notificationcenterproxy.cpp  notifyaccessor.cpp  notifyaccessor.h  notifyentity.cpp  notifyentity.h  notifyitem.cpp  notifyitem.h  notifymodel.cpp  notifymodel.h
shell/: CMakeLists.txt  InWindowBlur.qml  Menu.qml  MenuItem.qml  appletloader.cpp  appletloader.h  dde-shell-icons.qrc  dde-shell.qrc  main.cpp  override_dtkdeclarative_qml.qrc  shell.cpp  shell.h
shell/icons/: dde-shell.dci
shell/overrides/: org.deepin.dtk.preference.json
tests/: CMakeLists.txt
tests/check/: qt_wayland_keyextension.cpp
(+1170 files in other folders)
